veil-tests/src/compile_tests/fail/redact_attribute_key_value.rs
fn main() {}

#[derive(veil::Redact)]
#[redact = "ASDF"]
struct Foos {
    bar: String,
}
